FTT charts added

--- a/elements/elements.html
+++ b/elements/elements.html
@@ -33,6 +33,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/ldf-client/ldf-client.html">
 <link rel="import" href="../bower_components/google-chart-elk/google-chart.html">
 <link rel="import" href="../bower_components/material-search/material-search.html">
+<link rel="import" href="../bower_components/sentiment-d3/sentiment-d3.html">
+<link rel="import" href="../bower_components/entities-chart/entities-chart.html">
+<link rel="import" href="../bower_components/wheel-chart/wheel-chart.html">
 <link rel="import" href="../bower_components/chernoff-faces/chernoff-faces.html">
 
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
@@ -49,7 +52,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="my-greeting/my-greeting.html">
 <link rel="import" href="my-list/my-list.html">
 <link rel="import" href="dashboard-dbpedia/dashboard-dbpedia.html">
-<link rel="import" href="dashboard-twitter/dashboard-twitter.html">
+<!--<link rel="import" href="dashboard-twitter/dashboard-twitter.html">
+<link rel="import" href="dashboard-slovakia/dashboard-slovakia.html">-->
 <link rel="import" href="dashboard-tourpedia/dashboard-tourpedia.html">
 <link rel="import" href="dashboard-ftt/dashboard-ftt.html">
-<link rel="import" href="dashboard-slovakia/dashboard-slovakia.html">
