--- a/elements/dashboard-ftt/dashboard-ftt.html
+++ b/elements/dashboard-ftt/dashboard-ftt.html
@@ -2,7 +2,7 @@
 <link rel="import" href="../../bower_components/material-search/material-search.html">
 <link rel="import" href="../../bower_components/paper-material/paper-material.html">
 <link rel="import" href="../../bower_components/google-chart-elk/google-chart.html">
-<link rel="import" href="../../bower_components/chernoff-faces/chernoff-faces.html">
+<link rel="import" href="../../bower_components/sentiment-d3/sentiment-d3.html">
 
 
 <dom-module id="dashboard-ftt">
@@ -30,9 +30,26 @@
         last-response="{{endpoint}}"></iron-ajax>
     <material-search search-value="{{query}}"></material-search>
     <br>
-    <div style="width: 100%; display: inline-block">
+    <div style="width: 100%; display: inline-block; margin-bottom: 20px;">
+      <sentiment-d3
+            title="Sentiment"
+            icon="trending-up"
+            width="1200"></sentiment-d3>
+    </div>
+    <div style="width: 100%;">
       <div class="chart_container" style="left: 0; float: left">
-        <google-chart
+        <wheel-chart
+          title="Wheel Chart Sentiment"
+          icon="toll"></wheel-chart>
+      </div>
+      <div class="chart_container" style="right: 0; float: right">
+        <entities-chart
+            title="Entities"
+            icon="toc"></entities-chart>
+      </div>
+    </div>
+    <div class="chart_container" style="right: 0; float: right">
+      <google-chart
           query="{{query}}"
           index="sentiment"
           subindex="tweet"
@@ -49,92 +66,18 @@
           cols='[{"label": "Sentiment", "type": "string"},{"label": "Count", "type": "number"}]'
           rows='[ ["Jan", 31],["Feb", 28],["Mar", 31],["Apr", 30],["May", 31],["Jun", 30] ]'>
         </google-chart>
-      </div>
-      <div class="chart_container" style="right: 0; float: right">
-        <google-chart
-          query="{{query}}"
-          index="sentiment"
-          subindex="tweet"
-          field="place.name"
-          fields='["time_zone","place.name","sentiment"]'
-          host='{{endpoint}}'
-          id='pie-chart2'
-          extra-id='pie-chart2'
-          type='pie'
-          filters="{{filters}}"
-          icon='offline-pin'
-          param='{{param}}'
-          options='{"title": "Count of tweets at different places"}'
-          cols='[{"label": "Place", "type": "string"},{"label": "Count", "type": "number"}]'
-          rows='[ ["Jan", 31],["Feb", 28],["Mar", 31],["Apr", 30],["May", 31],["Jun", 30] ]'>
-        </google-chart>
+    </div>  
+    <div style="width: 100%;">
+      <div class="chart_container" style="left: 0; float: left">
+        <chernoff-faces 
+            width="250"
+            brand="Amazon"
+            hlE="0.1"
+            pE="0.1"
+            aE="0.1"
+            cM="0.1"></chernoff-faces>
       </div>
     </div>
-    <div style="width: 100%">
-      <div class="chart_container" style="left: 0; float: left">
-       <google-chart
-          query="{{query}}"
-          index="sentiment"
-          subindex="tweet"
-          field="retweet_count"
-          fields='["time_zone","place.name","sentiment"]'
-          host='{{endpoint}}'
-          id='bar-chart1'
-          extra-id='bar-chart1'
-          type='bar'
-          filters="{{filters}}"
-          icon='refresh'
-          param='{{param}}'
-          optionsbi='{"legend": "none"}'
-          options='{"title": "Count of tweets with certain RTs"}'
-          cols='[{"label": "Retweets", "type": "number"},{"label": "Tweets", "type": "number"}]'
-          rows='[ [0, 31],[1, 28],[2, 31],[3, 30],[4, 30],[5, 31],[6, 30] ]'>
-        </google-chart>
-      </div>
-      <div class="chart_container" style="right: 0; float: right">
-        <google-chart
-          query="{{query}}"
-          index="sentiment"
-          subindex="tweet"
-          field="time_zone"
-          fields='["time_zone","place.name","sentiment"]'
-          host='{{endpoint}}'
-          id='bar-chart2'
-          extra-id='bar-chart2'
-          type='bar'
-          filters="{{filters}}"
-          icon='flag'
-          param='{{param}}'
-          optionsbi='{"legend": "none"}'
-          options='{"title": "Count of tweets in different time zones"}'
-          cols='[{"label": "Time Zone", "type": "string"},{"label": "Tweets", "type": "number"}]'
-          rows='[ ["Jan", 31],["Feb", 28],["Mar", 31],["Apr", 30],["May", 31],["Jun", 30] ]'>
-        </google-chart>
-      </div>
-      <div style="width: 100%">
-        <div class="chart_container" style="left: 0; float: left">
-          <google-chart
-            query="{{query}}"
-            index="sentiment"
-            subindex="tweet"
-            field="entities.hashtags.text"
-            fields='["time_zone","place.name","sentiment"]'
-            host='{{endpoint}}'
-            id='table-chart1'
-            extra-id='table-chart1'
-            type='table'
-            filters="{{filters}}"
-            icon='search'
-            param='{{param}}'
-            options='{"title": "Count of tweets with certain RTs"}'
-            optionsbi='{"width": 100;}'
-            cols='[{"label": "Retweets", "type": "string"},{"label": "Tweets", "type": "number"}]'
-            rows='[ ["Jan", 31],["Feb", 28],["Mar", 31],["Apr", 30],["May", 31],["Jun", 30] ]'>
-          </google-chart>
-        </div>
-      </div>
-      
-    <chernoff-faces></chernoff-faces>
   </template>
 
   <script>
