Admin Console added

--- a/elements/elements.html
+++ b/elements/elements.html
@@ -56,3 +56,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="dashboard-slovakia/dashboard-slovakia.html">-->
 <link rel="import" href="dashboard-tourpedia/dashboard-tourpedia.html">
 <link rel="import" href="dashboard-ftt/dashboard-ftt.html">
+<link rel="import" href="help-panel/help-panel.html">
+<link rel="import" href="admin-console/admin-console.html">
