--- a/styles/app-theme.html
+++ b/styles/app-theme.html
@@ -67,7 +67,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     
     /* background for toolbar when it is condensed */
     --paper-scroll-header-panel-condensed-header: {
-      background-color: var(--default-primary-color);
+      background-color: white;
     };
   }
 
