Admin Console added

--- a/elements/dashboard-ftt/dashboard-ftt.html
+++ b/elements/dashboard-ftt/dashboard-ftt.html
@@ -70,12 +70,12 @@
     <div style="width: 100%;">
       <div class="chart_container" style="left: 0; float: left">
         <chernoff-faces 
-            width="250"
+            width="100"
             brand="Amazon"
-            hlE="0.1"
-            pE="0.1"
-            aE="0.1"
-            cM="0.1"></chernoff-faces>
+            hl-e="0.1"
+            p-e="0.5"
+            a-e="0.5"
+            c-m="0.1"></chernoff-faces>
       </div>
     </div>
   </template>
