--- a/elements/elements.html
+++ b/elements/elements.html
@@ -37,6 +37,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/entities-chart/entities-chart.html">
 <link rel="import" href="../bower_components/wheel-chart/wheel-chart.html">
 <link rel="import" href="../bower_components/chernoff-faces/chernoff-faces.html">
+<link rel="import" href="../bower_components/tweet-chart/tweet-chart.html">
 
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
 <!--
