--- a/elements/dashboard-ftt/dashboard-ftt.html
+++ b/elements/dashboard-ftt/dashboard-ftt.html
@@ -23,10 +23,10 @@
 
     .footer {
       clear: both;
-    position: relative;
-    z-index: 10;
-    height: 2em;
-    margin-top: -2em;
+      height: 2em;
+      margin-top: -2em;
+      display: flex;
+      justify-content: center
     }
 
   </style>
@@ -51,7 +51,7 @@
             index="ftt"
             subindex="entities"
             field=""
-            fields=''
+            fields='["user", "sentiment", "name", "text"]'
             filters="{{filters}}"
             param="{{param}}"
             host='{{endpoint}}'></chernoff-faces>
@@ -62,7 +62,7 @@
             index="ftt"
             subindex="entities"
             field="name"
-            fields=''
+            fields='["user", "sentiment", "name", "text"]'
             host='{{endpoint}}'
             title="Entities"
             icon="toc"
@@ -72,16 +72,17 @@
             filters="{{filters}}"></entities-chart>
       </div>
     </div>
+    <div style="clear: both; width: 100%"></div>
     <div style="width: 100%;">
       <div class="chart_container" style="left: 0; float: left">
         <wheel-chart
           title="Wheel Chart Sentiment"
           icon="toll"
           query="{{query}}"
-          index="gsi"
-          subindex="ftt"
-          field="entities.*.sentiment"
-          fields=''
+          index="ftt"
+          subindex="entities"
+          field=""
+          fields='["user", "sentiment", "name", "text"]'
           filters="{{filters}}"
           param="{{param}}"
           host='{{endpoint}}'></wheel-chart>
@@ -92,7 +93,7 @@
             index="ftt"
             subindex="entities"
             field="sentiment"
-            fields=''
+            fields='["user", "sentiment", "name", "text"]'
             host='{{endpoint}}'
             id='pie-chart1'
             extra-id='pie-chart1'
@@ -113,7 +114,7 @@
             index="ftt"
             subindex="entities"
             field="text"
-            fields=''
+            fields='["user", "sentiment", "name", "text"]'
             host='{{endpoint}}'
             id='pie-chart1'
             extra-id='pie-chart1'
@@ -124,8 +125,6 @@
       </div>
     </div>
       <div class="footer">
-        <hr>
-        <br>
         <div style="display:inline">
           <!--<img src="img/logo2.png" style="float: right;"/>-->
           <a href="http://gsi.dit.upm.es/" target="_blank">
