FTT dashboard updated

--- a/elements/elements.html
+++ b/elements/elements.html
@@ -29,8 +29,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-fab/paper-fab.html">
 <link rel="import" href="../bower_components/google-youtube/google-youtube.html">
 <link rel="import" href="../bower_components/yasgui/yasgui.html">
-<link rel="import" href="../bower_components/sentiment-chart/sentiment-chart.html">
-<link rel="import" href="../bower_components/ldf-client/ldf-client.html">
+<!--<link rel="import" href="../bower_components/sentiment-chart/sentiment-chart.html">-->
 <link rel="import" href="../bower_components/google-chart-elk/google-chart.html">
 <link rel="import" href="../bower_components/material-search/material-search.html">
 <link rel="import" href="../bower_components/sentiment-d3/sentiment-d3.html">
