--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <span class="flex"></span>
 
           <!-- Toolbar icons -->
-          <paper-icon-button icon="refresh" style="color: #2196F3" onclick="window.location.reload()"></paper-icon-button>
+          <paper-icon-button icon="refresh"  onclick="window.location.reload()"></paper-icon-button>
 
           <!-- Application name -->
           <div class="middle middle-container center horizontal layout" style="margin-left: 0">
-            <div class="app-name"><img src="images/Sefarad_Logo.png" style="width: 400px;"></div></div>
+            <div class="app-name"><img src="images/Sefarad__Banner_Bonus.jpg" style="width: 400px;"></div></div>
           </div>
 
           <!-- Application sub title -->
