--- a/styles/app-theme.html
+++ b/styles/app-theme.html
@@ -62,12 +62,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       height: 100%;
 
     --paper-scroll-header-panel-full-header: {
-      background-image: url(/images/top-photo.jpg);
+      background: #0588e0; /* For browsers that do not support gradients */
+      background: -webkit-linear-gradient(#0588e0, #04419B); /* For Safari 5.1 to 6.0 */
+      background: -o-linear-gradient(#0588e0, #04419B); /* For Opera 11.1 to 12.0 */
+      background: -moz-linear-gradient(#0588e0, #04419B); /* For Firefox 3.6 to 15 */
+      background: linear-gradient(#0588e0, #04419B); /* Standard syntax */
     };
     
     /* background for toolbar when it is condensed */
     --paper-scroll-header-panel-condensed-header: {
-      background-color: white;
+      background: #0588e0; /* For browsers that do not support gradients */
+      background: -webkit-linear-gradient(#0588e0, #04419B); /* For Safari 5.1 to 6.0 */
+      background: -o-linear-gradient(#0588e0, #04419B); /* For Opera 11.1 to 12.0 */
+      background: -moz-linear-gradient(#0588e0, #04419B); /* For Firefox 3.6 to 15 */
+      background: linear-gradient(#0588e0, #04419B); /* Standard syntax */
     };
   }
 
