FTT dashboard updated

--- a/elements/dashboard-ftt/dashboard-ftt.html
+++ b/elements/dashboard-ftt/dashboard-ftt.html
@@ -48,7 +48,7 @@
       <div class="chart_container" style="left: 0; float: left">
         <chernoff-faces 
             query="{{query}}"
-            index="ftt"
+            index="ftten"
             subindex="entities"
             field=""
             fields='["user", "sentiment", "name", "text"]'
@@ -59,7 +59,7 @@
       <div class="chart_container" style="right: 0; float: right">
         <entities-chart
             query="{{query}}"
-            index="ftt"
+            index="ftten"
             subindex="entities"
             field="name"
             fields='["user", "sentiment", "name", "text"]'
@@ -79,7 +79,7 @@
           title="Wheel Chart Sentiment"
           icon="toll"
           query="{{query}}"
-          index="ftt"
+          index="ftten"
           subindex="entities"
           field=""
           fields='["user", "sentiment", "name", "text"]'
@@ -90,7 +90,7 @@
       <div class="chart_container" style="right: 0; float: right">
         <google-chart
             query="{{query}}"
-            index="ftt"
+            index="ftten"
             subindex="entities"
             field="sentiment"
             fields='["user", "sentiment", "name", "text"]'
@@ -111,7 +111,7 @@
       <div class="chart_container" style="left: 0; float: right">
         <tweet-chart
             query="{{query}}"
-            index="ftt"
+            index="ftten"
             subindex="entities"
             field="text"
             fields='["user", "sentiment", "name", "text"]'
