--- a/elements/elements.html
+++ b/elements/elements.html
@@ -31,6 +31,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/yasgui/yasgui.html">
 <!--<link rel="import" href="../bower_components/sentiment-chart/sentiment-chart.html">-->
 <link rel="import" href="../bower_components/google-chart-elk/google-chart.html">
+<link rel="import" href="../bower_components/google-chart-elk/google-charter.html">
 <link rel="import" href="../bower_components/material-search/material-search.html">
 <link rel="import" href="../bower_components/sentiment-d3/sentiment-d3.html">
 <link rel="import" href="../bower_components/entities-chart/entities-chart.html">
