--- a/elements/dashboard-ftt/dashboard-ftt.html
+++ b/elements/dashboard-ftt/dashboard-ftt.html
@@ -2,12 +2,20 @@
 <link rel="import" href="../../bower_components/material-search/material-search.html">
 <link rel="import" href="../../bower_components/paper-material/paper-material.html">
 <link rel="import" href="../../bower_components/google-chart-elk/google-chart.html">
+<link rel="import" href="../../bower_components/google-chart-elk/google-charter.html">
 <link rel="import" href="../../bower_components/sentiment-d3/sentiment-d3.html">
+<link rel="import" href="../../bower_components/paper-tabs/paper-tabs.html">
+<link rel="import" href="../../bower_components/yasgui/yasgui.html">
 
 
 <dom-module id="dashboard-ftt">
 
   <style>
+  :root {
+      --paper-tab-ink: var(--accent-color);
+
+      --paper-tabs-selection-bar-color: var(--accent-color);
+    } 
     paper-material{
       background: white;
     }
@@ -28,6 +36,25 @@
       display: flex;
       justify-content: center
     }
+    /* Tablet+ */
+    @media (min-width: 601px) {
+      paper-tabs, paper-toolbar {
+        margin-top: -48px;
+        margin-bottom: 48px;
+        margin-left: -62px;
+        margin-right: -62px;
+      }
+    }
+
+    paper-tabs, paper-toolbar {
+      background-color: #04419B; 
+      color: #fff;
+      box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+    }
+
+    paper-tabs[noink][no-bar] paper-tab.iron-selected {
+      color: #04419B;
+    }
 
   </style>
 
@@ -36,102 +63,169 @@
         url="/endpoint.json"
         handle-as="json"
         last-response="{{endpoint}}"></iron-ajax>
-    <material-search search-value="{{query}}"></material-search>
-    <br>
-    <div style="width: 100%; display: inline-block; margin-bottom: 20px;">
-      <sentiment-d3
-            title="Sentiment"
-            icon="trending-up"
-            width="900"
-            query="{{query}}"
-            index="ftten"
-            subindex="entities"
-            field="name"
-            fields='["user", "sentiment", "name", "text"]'
-            host='{{endpoint}}'
-            param="{{param}}"
-            filters="{{filters}}"></sentiment-d3>
-    </div>
-    <div style="width: 100%;">
-      <div class="chart_container" style="left: 0; float: left">
-        <chernoff-faces 
-            query="{{query}}"
-            index="ftten"
-            subindex="entities"
-            field=""
-            fields='["user", "sentiment", "name", "text"]'
-            filters="{{filters}}"
-            param="{{param}}"
-            host='{{endpoint}}'></chernoff-faces>
+    <iron-ajax auto
+        url="queries_en.json"
+        handle-as="json"
+        last-response="{{queries_en}}"></iron-ajax>
+    <iron-ajax auto
+        url="queries_es.json"
+        handle-as="json"
+        last-response="{{queries_es}}"></iron-ajax>
+
+    <paper-tabs selected="{{selected}}">
+      <paper-tab>Dashboard</paper-tab>
+      <paper-tab>Sparql Editor EN</paper-tab>
+      <paper-tab>Sparql Editor ES</paper-tab>
+    </paper-tabs>
+
+    <iron-pages selected="{{selected}}">
+      <div>
+        <material-search search-value="{{query}}"></material-search>
+        <br>
+        <div style="width: 100%; display: inline-block; margin-bottom: 20px;">
+          <div class="chart_container" style="left: 0; float: left">
+            <google-charter
+              show="Sentiment"
+              query="{{query}}"
+              index="ftten"
+              subindex="entities"
+              field="sentiment"
+              fields='["user", "sentiment", "name", "text"]'
+              host='{{endpoint}}'
+              id='line-chart'
+              type="combo"
+              filters="{{filters}}"
+              icon='face'
+              param="{{param}}"
+              title='Sentiment Value'
+              options='{"seriesType": "line", "series": {"2": {"type": "bars"}}}'
+              data='[ ["Day", "A", "C"],
+                 ["Mon", 20, 45],
+                 ["Tue", 31, 66],
+                 ["Wed", 50, 80],
+                 ["Thu", 77, 50],
+                 ["Fri", 68, 15] ]'>
+            </google-charter>
+          </div>
+          <div class="chart_container" style="right: 0; float: right">
+            <google-charter
+              show="Value"
+              query="{{query}}"
+              index="ftten"
+              subindex="entities"
+              field="sentiment"
+              fields='["user", "sentiment", "name", "text"]'
+              host='{{endpoint}}'
+              id='line-chart'
+              type="combo"
+              filters="{{filters}}"
+              icon='face'
+              param="{{param}}"
+              title='Stock Value'
+              options='{"seriesType": "line", "series": {"2": {"type": "bars"}}}'
+              data='[ ["Day", "A", "C"],
+                 ["Mon", 20, 45],
+                 ["Tue", 31, 66],
+                 ["Wed", 50, 80],
+                 ["Thu", 77, 50],
+                 ["Fri", 68, 15] ]'>
+            </google-charter>
+          </div>
+        </div>
+        <div style="width: 100%;">
+          <div class="chart_container" style="left: 0; float: left">
+            <chernoff-faces 
+                query="{{query}}"
+                index="ftten"
+                subindex="entities"
+                field=""
+                fields='["user", "sentiment", "name", "text"]'
+                filters="{{filters}}"
+                param="{{param}}"
+                host='{{endpoint}}'></chernoff-faces>
+          </div>
+          <div class="chart_container" style="right: 0; float: right">
+            <entities-chart
+                query="{{query}}"
+                index="ftten"
+                subindex="entities"
+                field="name"
+                fields='["user", "sentiment", "name", "text"]'
+                host='{{endpoint}}'
+                title="Entities"
+                icon="toc"
+                entities="{{entities}}"
+                param="{{param}}"
+                id="entity-chart"
+                filters="{{filters}}"></entities-chart>
+          </div>
+        </div>
+        <div style="clear: both; width: 100%"></div>
+        <div style="width: 100%;">
+          <div class="chart_container" style="left: 0; float: left">
+            <wheel-chart
+              title="Wheel Chart Sentiment"
+              icon="toll"
+              query="{{query}}"
+              index="ftten"
+              subindex="entities"
+              field=""
+              fields='["user", "sentiment", "name", "text"]'
+              filters="{{filters}}"
+              param="{{param}}"
+              host='{{endpoint}}'></wheel-chart>
+          </div>
+          <div class="chart_container" style="right: 0; float: right">
+            <google-chart
+                query="{{query}}"
+                index="ftten"
+                subindex="entities"
+                field="sentiment"
+                fields='["user", "sentiment", "name", "text"]'
+                host='{{endpoint}}'
+                id='pie-chart1'
+                extra-id='pie-chart1'
+                type='pie'
+                filters="{{filters}}"
+                icon='face'
+                param="{{param}}"
+                options='{"title": "Count of tweets with different sentiments"}'
+                cols='[{"label": "Sentiment", "type": "string"},{"label": "Count", "type": "number"}]'
+                rows='[ ["Jan", 31],["Feb", 28],["Mar", 31],["Apr", 30],["May", 31],["Jun", 30] ]'>
+              </google-chart>
+          </div>  
+        </div>
+        <div style="width: 100%;">
+          <div class="chart_container" style="left: 0; float: right">
+            <tweet-chart
+                query="{{query}}"
+                index="ftten"
+                subindex="entities"
+                field="text"
+                fields='["user", "sentiment", "name", "text"]'
+                host='{{endpoint}}'
+                id='pie-chart1'
+                extra-id='pie-chart1'
+                type='pie'
+                filters="{{filters}}"
+                icon='face'
+                param="{{param}}"></tweet-chart>
+          </div>
+        </div>
       </div>
-      <div class="chart_container" style="right: 0; float: right">
-        <entities-chart
-            query="{{query}}"
-            index="ftten"
-            subindex="entities"
-            field="name"
-            fields='["user", "sentiment", "name", "text"]'
-            host='{{endpoint}}'
-            title="Entities"
-            icon="toc"
-            entities="{{entities}}"
-            param="{{param}}"
-            id="entity-chart"
-            filters="{{filters}}"></entities-chart>
+      <div>
+        <yasgui-ui
+            endpoint="http://fuseki-ftt.cluster.gsi.dit.upm.es/ftt-en/query"
+            queries="{{queries_en}}">
+        </yasgui-ui>
       </div>
-    </div>
-    <div style="clear: both; width: 100%"></div>
-    <div style="width: 100%;">
-      <div class="chart_container" style="left: 0; float: left">
-        <wheel-chart
-          title="Wheel Chart Sentiment"
-          icon="toll"
-          query="{{query}}"
-          index="ftten"
-          subindex="entities"
-          field=""
-          fields='["user", "sentiment", "name", "text"]'
-          filters="{{filters}}"
-          param="{{param}}"
-          host='{{endpoint}}'></wheel-chart>
+      <div>
+        <yasgui-ui
+            endpoint="http://fuseki-ftt.cluster.gsi.dit.upm.es/ftt-es/query"
+            queries="{{queries_es}}">
+        </yasgui-ui>
       </div>
-      <div class="chart_container" style="right: 0; float: right">
-        <google-chart
-            query="{{query}}"
-            index="ftten"
-            subindex="entities"
-            field="sentiment"
-            fields='["user", "sentiment", "name", "text"]'
-            host='{{endpoint}}'
-            id='pie-chart1'
-            extra-id='pie-chart1'
-            type='pie'
-            filters="{{filters}}"
-            icon='face'
-            param="{{param}}"
-            options='{"title": "Count of tweets with different sentiments"}'
-            cols='[{"label": "Sentiment", "type": "string"},{"label": "Count", "type": "number"}]'
-            rows='[ ["Jan", 31],["Feb", 28],["Mar", 31],["Apr", 30],["May", 31],["Jun", 30] ]'>
-          </google-chart>
-      </div>  
-    </div>
-    <div style="width: 100%;">
-      <div class="chart_container" style="left: 0; float: right">
-        <tweet-chart
-            query="{{query}}"
-            index="ftten"
-            subindex="entities"
-            field="text"
-            fields='["user", "sentiment", "name", "text"]'
-            host='{{endpoint}}'
-            id='pie-chart1'
-            extra-id='pie-chart1'
-            type='pie'
-            filters="{{filters}}"
-            icon='face'
-            param="{{param}}"></tweet-chart>
-      </div>
-    </div>
+      </iron-pages>
       <div class="footer">
         <div style="display:inline">
           <!--<img src="img/logo2.png" style="float: right;"/>-->
@@ -153,6 +247,10 @@
     Polymer({
       is: 'dashboard-ftt',
       properties: {
+        selected: {
+          type: Number,
+          value: 0
+        }, 
 
       },
 
