footballmood added to sefarad

--- a/elements/elements.html
+++ b/elements/elements.html
@@ -31,6 +31,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/yasgui/yasgui.html">
 <!--<link rel="import" href="../bower_components/sentiment-chart/sentiment-chart.html">-->
 <link rel="import" href="../bower_components/google-chart-elk/google-chart.html">
+<link rel="import" href="../bower_components/paper-toggle-button-football/paper-toggle-button.html">
 <link rel="import" href="../bower_components/google-chart-elk/google-charter.html">
 <link rel="import" href="../bower_components/material-search/material-search.html">
 <link rel="import" href="../bower_components/sentiment-d3/sentiment-d3.html">
@@ -38,6 +39,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/wheel-chart/wheel-chart.html">
 <link rel="import" href="../bower_components/chernoff-faces/chernoff-faces.html">
 <link rel="import" href="../bower_components/tweet-chart/tweet-chart.html">
+<link rel="import" href="../bower_components/tweet-chart-football/tweet-chart.html">
+<link rel="import" href="../bower_components/field-chart/field-chart.html">
+<link rel="import" href="../bower_components/spider-chart/spider-chart.html">
+<link rel="import" href="../bower_components/spain-chart/spain-chart1.html">
+<link rel="import" href="../bower_components/spain-chart/spain-chartfilter.html">
+<link rel="import" href="../bower_components/spain-chart/spain-emotion.html">
+<link rel="import" href="../bower_components/liquid-fluid-d3/liquid-fluid-d3.html">
+<link rel="import" href="../bower_components/liquid-fluid-d3/trending-chart.html">
+<link rel="import" href="../bower_components/liquid-fluid-d3/ranking-players.html">
+<link rel="import" href="../bower_components/liquid-fluid-d3/ranking-teams.html">
+<link rel="import" href="../bower_components/liquid-fluid-d3/top-teams.html">
+<link rel="import" href="../bower_components/liquid-fluid-d3/top-players.html">
 
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
 <!--
@@ -56,6 +69,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!--<link rel="import" href="dashboard-twitter/dashboard-twitter.html">
 <link rel="import" href="dashboard-slovakia/dashboard-slovakia.html">-->
 <link rel="import" href="dashboard-tourpedia/dashboard-tourpedia.html">
+<link rel="import" href="dashboard-football/dashboard-football.html">
 <link rel="import" href="dashboard-ftt/dashboard-ftt.html">
 <link rel="import" href="help-panel/help-panel.html">
 <link rel="import" href="admin-console/admin-console.html">
