--- a/elements/routing.html
+++ b/elements/routing.html
@@ -39,6 +39,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.route = 'dashftt';
     });
 
+    page('/footballmood', function () {
+      app.route = 'footballmood';
+    });
+
     page('/dashslovakia', function () {
       app.route = 'dashslovakia';
     });
