--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <iron-icon icon="face"></iron-icon>
             <span>Dashboard FTT</span>
           </a>
+          <a data-route="footballmood" href="/footballmood">
+            <iron-icon icon="maps:directions-run"></iron-icon>
+            <span>Dashboard Footballmood</span>
+          </a>
 
           <a data-route="admin" href="/admin">
             <iron-icon icon="extension"></iron-icon>
@@ -187,6 +191,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
             <section data-route="dashslovakia">
               <dashboard-slovakia></dashboard-slovakia>
+            </section>
+
+            <section data-route="footballmood">
+              <dashboard-football></dashboard-football>
             </section>
 
             <section data-route="admin">
