--- a/index.html
+++ b/index.html
@@ -117,7 +117,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <iron-icon icon="maps:directions-run"></iron-icon>
             <span>Dashboard Footballmood</span>
           </a>
-
+	  <a data-route="gsicrawler" href="/gsicrawler">
+            <iron-icon icon="visibility"></iron-icon>
+            <span>GSI Crawler</span>
+          </a>
           <a data-route="admin" href="/admin">
             <iron-icon icon="extension"></iron-icon>
             <span>Admin Console</span>
@@ -195,6 +198,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
             <section data-route="footballmood">
               <dashboard-football></dashboard-football>
+            </section>
+
+	    <section data-route="gsicrawler">
+              <gsicrawler-greeting></gsicrawler-greeting>
             </section>
 
             <section data-route="admin">
