--- a/elements/elements.html
+++ b/elements/elements.html
@@ -29,6 +29,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-fab/paper-fab.html">
 <link rel="import" href="../bower_components/google-youtube/google-youtube.html">
 <link rel="import" href="../bower_components/yasgui/yasgui.html">
+
+<!--GSI Crawler components-->
+<link rel="import" href="../bower_components/google-chart-elk/google-chart.html">
+<link rel="import" href="../bower_components/google-chart-elk/google-charter.html">
+<link rel="import" href="../bower_components/material-search/material-search.html">
+<link rel="import" href="../bower_components/sentiment-d3/sentiment-d3.html">
+<link rel="import" href="../bower_components/entities-chart/entities-chart.html">
+<link rel="import" href="../bower_components/wheel-chart/wheel-chart.html">
+<link rel="import" href="../bower_components/chernoff-faces/chernoff-faces.html">
+<link rel="import" href="../bower_components/tweet-chart/tweet-chart.html">
+<link rel="import" href="../bower_components/paper-toast/paper-toast.html">
+<link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
+<link rel="import" href="../bower_components/paper-dialog-scrollable/paper-dialog-scrollable.html">
+
 <!--<link rel="import" href="../bower_components/sentiment-chart/sentiment-chart.html">-->
 <link rel="import" href="../bower_components/google-chart-elk/google-chart.html">
 <link rel="import" href="../bower_components/paper-toggle-button-football/paper-toggle-button.html">
@@ -51,7 +65,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/liquid-fluid-d3/ranking-teams.html">
 <link rel="import" href="../bower_components/liquid-fluid-d3/top-teams.html">
 <link rel="import" href="../bower_components/liquid-fluid-d3/top-players.html">
-
+<link rel="import" href="../bower_components/paper-dialog-scrollable/paper-dialog-scrollable.html">
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
 <!--
 <link rel="import" href="../bower_components/platinum-sw/platinum-sw-cache.html">
@@ -62,14 +76,29 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="routing.html">
 
 <!-- Add your elements here -->
-<link rel="import" href="../styles/app-theme.html">
-<link rel="import" href="my-greeting/my-greeting.html">
-<link rel="import" href="my-list/my-list.html">
-<link rel="import" href="dashboard-dbpedia/dashboard-dbpedia.html">
-<!--<link rel="import" href="dashboard-twitter/dashboard-twitter.html">
-<link rel="import" href="dashboard-slovakia/dashboard-slovakia.html">-->
-<link rel="import" href="dashboard-tourpedia/dashboard-tourpedia.html">
-<link rel="import" href="dashboard-football/dashboard-football.html">
-<link rel="import" href="dashboard-ftt/dashboard-ftt.html">
-<link rel="import" href="help-panel/help-panel.html">
-<link rel="import" href="admin-console/admin-console.html">
+
+	<!--Default-->
+		<link rel="import" href="../styles/app-theme.html">
+		<link rel="import" href="my-greeting/my-greeting.html">
+		<link rel="import" href="my-list/my-list.html">
+	<!--Tourpedia-->
+		<link rel="import" href="dashboard-dbpedia/dashboard-dbpedia.html">
+	<!--<link rel="import" href="dashboard-twitter/dashboard-twitter.html">
+	<link rel="import" href="dashboard-slovakia/dashboard-slovakia.html">-->
+		<link rel="import" href="dashboard-tourpedia/dashboard-tourpedia.html">
+	<!--Football-->
+		<link rel="import" href="dashboard-football/dashboard-football.html">
+	<!--FTT-->
+		<link rel="import" href="dashboard-ftt/dashboard-ftt.html">
+	<!--GSI Crawler-->
+		<link rel="import" href="dashboard-gsicrawler/floating-menu/floating-menu.html">
+		<link rel="import" href="dashboard-gsicrawler/gsicrawler-greeting.html">
+		<link rel="import" href="dashboard-gsicrawler/my-list/my-list.html">
+		<link rel="import" href="dashboard-gsicrawler/font-awesome.html">
+		<link rel="import" href="dashboard-gsicrawler/new-analysis-dialog.html">
+		<link rel="import" href="dashboard-gsicrawler/new-analysis-dialog-nourl.html">
+		<link rel="import" href="dashboard-gsicrawler/analysis-card/analysis-card.html">
+	<!--Help-->
+		<link rel="import" href="help-panel/help-panel.html">
+	<!--Admin-->
+		<link rel="import" href="admin-console/admin-console.html">
