dashboard aspects added

--- a/elements/elements.html
+++ b/elements/elements.html
@@ -66,6 +66,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/liquid-fluid-d3/top-teams.html">
 <link rel="import" href="../bower_components/liquid-fluid-d3/top-players.html">
 <link rel="import" href="../bower_components/paper-dialog-scrollable/paper-dialog-scrollable.html">
+<link rel="import" href="../bower_components/aspect-chart/aspect-chart.html">
+<link rel="import" href="../bower_components/wheel-aspects/wheel-aspects.html">
+<link rel="import" href="../bower_components/spider-aspects/spider-aspects.html">
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
 <!--
 <link rel="import" href="../bower_components/platinum-sw/platinum-sw-cache.html">
@@ -90,10 +93,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		<link rel="import" href="dashboard-football/dashboard-football.html">
 	<!--FTT-->
 		<link rel="import" href="dashboard-ftt/dashboard-ftt.html">
+	<!--Absa-->
+		<link rel="import" href="dashboard-aspects/dashboard-aspects.html">
 	<!--GSI Crawler-->
 		<link rel="import" href="dashboard-gsicrawler/floating-menu/floating-menu.html">
 		<link rel="import" href="dashboard-gsicrawler/gsicrawler-greeting.html">
-		<link rel="import" href="dashboard-gsicrawler/my-list/my-list.html">
 		<link rel="import" href="dashboard-gsicrawler/font-awesome.html">
 		<link rel="import" href="dashboard-gsicrawler/new-analysis-dialog.html">
 		<link rel="import" href="dashboard-gsicrawler/new-analysis-dialog-nourl.html">
