--- a/elements/routing.html
+++ b/elements/routing.html
@@ -58,8 +58,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.route = 'footballmood';
     });
 
+    page('/absa', function () {
+      app.route = 'absa';
+    });
+
     page('/gsicrawler',showFloatingButton,function(){
-	app.route = 'gsicrawler';
+	    app.route = 'gsicrawler';
     });	
 
     page('/dashslovakia', function () {
