--- a/index.html
+++ b/index.html
@@ -117,7 +117,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <iron-icon icon="maps:directions-run"></iron-icon>
             <span>Dashboard Footballmood</span>
           </a>
-	  <a data-route="gsicrawler" href="/gsicrawler">
+          <a data-route="absa" href="/absa">
+            <iron-icon icon="dashboard"></iron-icon>
+            <span>Aspects Dashboard</span>
+          </a>
+	        <a data-route="gsicrawler" href="/gsicrawler">
             <iron-icon icon="visibility"></iron-icon>
             <span>GSI Crawler</span>
           </a>
@@ -198,6 +202,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
             <section data-route="footballmood">
               <dashboard-football></dashboard-football>
+            </section>
+
+            <section data-route="absa">
+              <dashboard-aspects></dashboard-aspects>
             </section>
 
 	    <section data-route="gsicrawler">
