--- a/elements/dashboard-gsicrawler/analysis-card/fake-review-view.html
+++ b/elements/dashboard-gsicrawler/analysis-card/fake-review-view.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="../../../bower_components/iron-icon/iron-icon.html">
 
 <dom-module id="fake-review-view">
   <style is="custom-style">
