--- a/elements/dashboard-gsicrawler/bwu_fontawesome_iconset_svg/bwu_fontawesome_iconset_svg.html
+++ b/elements/dashboard-gsicrawler/bwu_fontawesome_iconset_svg/bwu_fontawesome_iconset_svg.html
@@ -26,8 +26,8 @@
   }
 </style>
 
-<link rel="import" href="../../bower_components/polymer/polymer.html">
-<link rel="import" href="../../bower_components/iron-iconset-svg/iron-iconset-svg.html">
+<link rel="import" href="../../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../../bower_components/iron-iconset-svg/iron-iconset-svg.html">
 
 <polymer-element name='bwu-fontawesome-iconset-svg' noscript>
   <template>
