--- a/elements/dashboard-gsicrawler/emotion-analysis-card/emotion-analysis-card.html
+++ b/elements/dashboard-gsicrawler/emotion-analysis-card/emotion-analysis-card.html
@@ -1,9 +1,9 @@
-<link rel="import" href="../../bower_components/iron-ajax/iron-ajax.html">
-<link rel="import" href="../../bower_components/iron-image/iron-image.html">
-<link rel="import" href="../../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../../../bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="../../../bower_components/iron-image/iron-image.html">
+<link rel="import" href="../../../bower_components/paper-button/paper-button.html">
 <!--<link rel="import" href="../../bower_components/paper-progress/paper-progress.html">-->
-<link rel="import" href="../../bower_components/paper-spinner/paper-spinner.html">
-<link rel="import" href="../../bower_components/neon-animation/neon-animation-runner-behavior.html">
+<link rel="import" href="../../../bower_components/paper-spinner/paper-spinner.html">
+<link rel="import" href="../../../bower_components/neon-animation/neon-animation-runner-behavior.html">
 <link rel="import" href="emotion-review-view.html">
 
 <dom-module id="emotion-analysis-card">
