--- a/elements/dashboard-gsicrawler/floating-menu/floating-menu.html
+++ b/elements/dashboard-gsicrawler/floating-menu/floating-menu.html
@@ -1,10 +1,11 @@
+<link rel="import" href="../../../bower_components/paper-fab/paper-fab.html">
 <link rel="import" href="../../../bower_components/paper-fab-transitions/paper-fab-speed-dial.html">
 
 <dom-module id="floating-menu">
 	<style>
 	paper-fab.paper-fab-0 {
-	    background: #00A9E0;
-	    color: #ffffff;
+	    background: #00A9E0 !important;
+	    color: #ffffff !important;
 	}
 	body{
 		position:fixed;
