--- a/elements/dashboard-gsicrawler/gsicrawler-greeting.html
+++ b/elements/dashboard-gsicrawler/gsicrawler-greeting.html
@@ -8,6 +8,8 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/paper-fab/paper-fab.html">
+<link rel="import" href="../../bower_components/paper-fab-transitions/paper-fab-speed-dial.html">
 <link rel="import" href="../elements.html">
 <dom-module id="gsicrawler-greeting">
   <template>
@@ -37,6 +39,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 	#no-analysis-message span{
 		font-size: 90%;
 	}
+  paper-fab.paper-fab-0 {
+      background: #00A9E0 !important;
+      color: #ffffff !important;
+  }
 
     </style>
     <style>
