elasticsearch config updated, docker image built and style fixes

--- a/elements/dashboard-gsicrawler/floating-menu/floating-menu.html
+++ b/elements/dashboard-gsicrawler/floating-menu/floating-menu.html
@@ -1,5 +1,4 @@
-<link rel="import" href="../../../bower_components/paper-fab/paper-fab.html">
-<link rel="import" href="../../../bower_components/paper-fab-transitions/paper-fab-speed-dial.html">
+<link rel="import" href="../../../bower_components/iron-icons/iron-icons.html">
 
 <dom-module id="floating-menu">
 	<style>
@@ -16,12 +15,13 @@
 		<paper-fab icon="visibility" class="dropdown-trigger"></paper-fab>
 		<div class="dropdown-content">
 		  <paper-fab mini icon="fa:foursquare" on-tap="newFoursquareAnalysis"></paper-fab>
-		  <paper-fab mini icon="fa:yelp" on-tap="newYelpAnalysis"></paper-fab>
+		  <paper-fab mini icon="fa:amazon" on-tap="newAmazonAnalysis"></paper-fab>
+		  <!--<paper-fab mini icon="fa:yelp" on-tap="newYelpAnalysis"></paper-fab>
 		  <paper-fab mini icon="fa:amazon" on-tap="newAmazonAnalysis"></paper-fab>
 		  <paper-fab mini icon="fa:twitter" on-tap="newTwitterAnalysis"></paper-fab>
 		  <paper-fab mini icon="fa:facebook" on-tap="newFacebookAnalysis"></paper-fab>
 		  <paper-fab mini icon="fa:youtube" on-tap="newYoutubeAnalysis"></paper-fab>
-		  <paper-fab mini icon="fa:tripadvisor" on-tap="newTripAdvisorAnalysis"></paper-fab>
+		  <paper-fab mini icon="fa:tripadvisor" on-tap="newTripAdvisorAnalysis"></paper-fab>-->
 		</div>
 		</paper-fab-speed-dial>
 	</template>
