--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <iron-icon icon="visibility"></iron-icon>
             <span>GSI Crawler</span>
           </a>
-          <a data-route="admin" href="/admin">
+          <!--<a data-route="admin" href="/admin">
             <iron-icon icon="extension"></iron-icon>
             <span>Admin Console</span>
-          </a>
+          </a>-->
 
           <!--<a data-route="dashslovakia" href="/dashslovakia">
             <iron-icon icon="social:public"></iron-icon>
@@ -208,13 +208,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               <dashboard-aspects></dashboard-aspects>
             </section>
 
-	    <section data-route="gsicrawler">
+	          <section data-route="gsicrawler">
               <gsicrawler-greeting></gsicrawler-greeting>
             </section>
 
-            <section data-route="admin">
+            <!--<section data-route="admin">
               <admin-console></admin-console>
-            </section>
+            </section>-->
 
             <section data-route="help">
               <help-panel></help-panel>
