--- a/styles/app-theme.html
+++ b/styles/app-theme.html
@@ -40,6 +40,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     --drawer-border-color: 1px solid #ccc;
     --drawer-toolbar-border-color: 1px solid rgba(0, 0, 0, 0.22);
 
+    /*paper-fab*/
+    --paper-fab-keyboard-focus-background: #00629B;
+    --paper-fab-background : #00629B;
+
     /* paper-menu */
     --paper-menu-background-color: #fff;
     --menu-link-color: #111111;
