tourpedia sparql enpoint changed

--- a/elements/dashboard-tourpedia/dashboard-tourpedia.html
+++ b/elements/dashboard-tourpedia/dashboard-tourpedia.html
@@ -207,7 +207,7 @@
       </div>
       <div>
         <yasgui-ui
-            endpoint="http://lab.gsi.dit.upm.es:5050/tourpedia/sparql"
+            endpoint="http://fuseki-tourpedia.cluster.gsi.dit.upm.es/tourpedia/query"
             queries="{{queries}}">
         </yasgui-ui>
       </div>
