--- a/elements/my-greeting/my-greeting.html
+++ b/elements/my-greeting/my-greeting.html
@@ -72,7 +72,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		    <p><a href="http://www.gsi.dit.upm.es/administrator/components/com_jresearch/files/publications/tfgenriqueconde.pdf">[1]</a> Development of a Social Media Monitoring System based on Elasticsearch and Web Components Technologies</p>
 		  </div>
 		  <div class="card-actions">
-		    <paper-button><a href="/tourpedia" style="color:white">Explore</a></paper-button>
+		    <paper-button class="button-index"><a href="/tourpedia">Explore</a></paper-button>
 
 		  </div>
 		</div>
@@ -91,7 +91,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		    <p></p>
 		  </div>
 		  <div class="card-actions">
-		    <paper-button><a href="/dashftt">Explore</a></paper-button>
+		    <paper-button class="button-index"><a href="/dashftt">Explore</a></paper-button>
 		  </div>
 		</div>
 	</paper-card>
@@ -108,7 +108,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		    <a href="http://footballmood.cluster.gsi.dit.upm.es/">Demo</a>
 		  </div>
 		  <div class="card-actions">
-		    <paper-button><a href="/footballmood">Explore</a></paper-button>
+		    <paper-button class="button-index"><a href="/footballmood">Explore</a></paper-button>
 		  </div>
 		</div>
 	</paper-card>
@@ -125,7 +125,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		    <a href="http://www.gsi.dit.upm.es/administrator/components/com_jresearch/files/publications/jecarmona.pdf">[1]</a>Development of a Social Media Crawler for Sentiment Analysis.
 		  </div>
 		  <div class="card-actions">
-		    <paper-button><a href="/gsicrawler" target="_self">Explore</a></paper-button>
+		    <paper-button class="button-index"><a href="/gsicrawler" target="_self">Explore</a></paper-button>
 		  </div>
 		</div>
 	</paper-card>
@@ -142,7 +142,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		    <a href="">[1]</a>-
 		  </div>
 		  <div class="card-actions">
-		    <paper-button><a href="/absa">Explore</a></paper-button>
+		    <paper-button class="button-index"><a href="/absa">Explore</a></paper-button>
 		  </div>
 		</div>
 	</paper-card>
