footballnews added to sefarad

--- a/elements/elements.html
+++ b/elements/elements.html
@@ -58,6 +58,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/aspect-chart/aspect-chart.html">
 <link rel="import" href="../bower_components/wheel-aspects/wheel-aspects.html">
 <link rel="import" href="../bower_components/spider-aspects/spider-aspects.html">
+<link rel="import" href="../bower_components/spider-chart-multiple-newspaper/spider-chart-multiple-newspaper.html">
+<link rel="import" href="../bower_components/spider-chart-multiple-team/spider-chart-multiple-team.html">
+<link rel="import" href="../bower_components/spider-chart-multiple-team-atletico/spider-chart-multiple-team-atletico.html">
+<link rel="import" href="../bower_components/news-chart/news-chart.html">
+<link rel="import" href="../bower_components/trend-chart-multiple-as/trend-chart-multiple-as.html">
+<link rel="import" href="../bower_components/trend-chart-multiple-atletico/trend-chart-multiple-atletico.html">
+<link rel="import" href="../bower_components/trend-chart-multiple-barca/trend-chart-multiple-barca.html">
+<link rel="import" href="../bower_components/trend-chart-multiple-madrid/trend-chart-multiple-madrid.html">
+<link rel="import" href="../bower_components/trend-chart-multiple-marca/trend-chart-multiple-marca.html">
+<link rel="import" href="../bower_components/trend-chart-multiple-md/trend-chart-multiple-md.html">
+<link rel="import" href="../bower_components/trend-chart-multiple-sport/trend-chart-multiple-sport.html">
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
 <!--
 <link rel="import" href="../bower_components/platinum-sw/platinum-sw-cache.html">
@@ -81,6 +92,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="gsicrawler-panel/floating-menu/floating-menu.html">
 <link rel="import" href="gsicrawler-panel/gsicrawler-greeting.html">
 <link rel="import" href="gsicrawler-panel/my-list/my-list.html">
+<link rel="import" href="dashboard-teams/dashboard-teams.html">
+<link rel="import" href="dashboard-newspaper/dashboard-newspaper.html">
 <link rel="import" href="gsicrawler-panel/font-awesome.html">
 <link rel="import" href="gsicrawler-panel/new-analysis-dialog.html">
 <link rel="import" href="gsicrawler-panel/new-analysis-dialog-nourl.html">
