--- a/elements/routing.html
+++ b/elements/routing.html
@@ -66,6 +66,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     page('/gsicrawler',function(){
 	app.route = 'gsicrawler';
     });
+    page('/footballnews', function () {
+      app.route = 'dashnewspaper';
+    });
+
+    page('/dashteams', function () {
+      app.route = 'dashteams';
+    });
 
     // add #! before urls
     page({
